--- a/index.html
+++ b/index.html
@@ -306,6 +306,85 @@
                 </div>
             </div>
         </div>
+
+        <div class="footer">
+
+            <div class="footer-top">
+                <div class="container">
+                    <div class="footer-main">
+                        <div class="footer-col">
+                            <div class="footer-logo">
+                                <img src="./img/logo-footer.png" alt="" class="footer-logo--img">
+                            </div>
+                            <p class="footer-text">
+                                Vivamus dapibus et purus quis mollis. Mauris tempus tortor vel mi eleifend laoreet. Nulla laoreet sapien erat.
+                            </p>
+                            <div class="footer-social">
+                                <i class="social-icon fab fa-facebook-f"></i>
+                                <i class="social-icon fab fa-twitter"></i>
+                                <i class="social-icon fab fa-instagram"></i>
+                                <i class="social-icon fab fa-dribbble"></i>
+                            </div>
+                        </div>
+                        <div class="footer-col">
+                            <p class="footer-heading">Usefull Links</p>
+                            <ul class="footer-list">
+                                <li class="footer-item">
+                                    <a href="" class="footer-link footer-text">About us</a>
+                                </li>
+                                <li class="footer-item">
+                                    <a href="" class="footer-link footer-text">Contact us</a>
+                                </li>
+                                <li class="footer-item">
+                                    <a href="" class="footer-link footer-text">Terms of Services</a>
+                                </li>
+                                <li class="footer-item">
+                                    <a href="" class="footer-link footer-text">Plan and Precing</a>
+                                </li>
+                                <li class="footer-item">
+                                    <a href="" class="footer-link footer-text">Site map</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="footer-col">
+                            <p class="footer-heading">Contact Us</p>
+                            <ul class="footer-list">
+                                <li class="footer-item">
+                                    <p class="footer-phone1 footer-text">
+                                        Phone Number: <a href="tel:+ 051 958 23 78 51" class="footer-link">( + 051 ) 958 23 78 51</a>
+                                    </p>
+                                    <p class="footer-phone2 footer-text">
+                                        Phone Number 2: <a href="tel:+ 051 958 23 78 51" style="color:white" class="footer-link">( + 051 ) 958 23 78 51</a>
+                                    </p>
+                                </li>
+                                <li class="footer-item">
+                                    <p class="footer-email footer-text">
+                                        Email: <a href="" class="footer-link">support@ocatavian.io</a>
+                                    </p>
+                                    <p class="footer-fax footer-text">
+                                        Fax: <a href="" class="footer-link">support@ocatavian.io</a>
+                                    </p>
+                                </li>
+                                <li class="footer-item">
+                                    <p class="footer-address footer-text">
+                                        Address: Envato Pty Ltd 13/2 Permanent ST melbourne VLC 3000 - Australia
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <div class="container footer-container">
+                    <a href="" class="btn btn-primary footer-rocket">
+                        <i class="fas fa-rocket"></i>
+                    </a>
+                    <p>Copyright © 2020 Octavian, Designed by <a href="#">TexTheme</a> All Rights Reserved.</p>
+                </div>
+            </div>
+
+        </div>
     </div>
 </body>
 
